css/style.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;700&display=swap');
body{
    padding: 0;
    margin: 0;
    font-size: 16px;
    overflow-x: hidden !important;
    color: #353945;
    font-family: 'Nunito', sans-serif;

}
/* navbar styling */
nav{
    background-color: #ffff;
}
.navbar-light .navbar-brand img {
   width: 10rem;
}
.has-search .form-control {
    padding-left: 2.375rem;
}
.has-search .form-control-feedback {
    position: absolute;
    z-index: 2;
    display: block;
    width: 2.375rem;
    height: 2.375rem;
    line-height: 2.375rem;
    text-align: center;
    pointer-events: none;
    color: #aaa;
}
.has-search .form-control{
    width: 100%;
    border-radius: 5rem;
    border: 1px solid #DADADA;
    color: #DADADA;
}
.navbar-light .navbar-nav .nav-link {
    font-weight: bold;
    color: #000000;
}
.navbar-light .navbar-toggler {
    color: transparent !important; 
    border-color: transparent !important;
}
.btn-tuanekaColor{
    background-color: #D62E6A;
    color: #ffffff;
    border-radius: 5rem;
    width: 10rem; 
    border-color: #D62E6A ;
}
.btn-skill{
    background-color: #ffffff;
    border: 1px solid #D62E6A;
    border-radius: 5rem;
    color: #353945;
    font-weight: 600;
    font-size: 18px;
    line-height: 21px;
    padding: 12px 19px;
    width: 10rem;
}
.btn-tuanekaColor:hover{
    background-color: #D62E6A;
    border-color: #D62E6A;
}
.btn-tuanekaColorJob{
    border-radius: 5rem;
    padding: 0 1.5rem;
}
.btn-tuanekaColor:focus{
    color: #fff;
    background-color: #D62E6A;
    box-shadow: 0 0 0 0.25rem #D62E6A;
}
.btn-tuanekaColor:active:focus{
    box-shadow:0 0 0 0.25rem #D62E6A ;
}
.btn-tuanekaColorJob:hover{
    color: #D62E6A;
    border: 1px solid #D62E6A;
}

.btn-tuanekaColorJob:focus{
    color: #fff !important;
    background-color: #D62E6A;
    border-color: #D62E6A;
}


.btn-tuanekaColor-white{
    background-color: #D62E6A;
    color: #ffffff;
    border-radius: 5rem;
    width: 7rem; 
    border:2px solid #D62E6A ;
    width: 12rem;
}
.btn-tuanekaColor-white:hover{
    background-color: #ffffff;
    color: #D62E6A;
}
.btn-tuanekaColor-white:active:focus{
    box-shadow:0 0 0 0.25rem #D62E6A ;
}
.btn-secondary{
    border-radius: 5rem;
    padding: 0 .5rem;
    margin-right:.5rem;
    height: 2rem;
    font-size: .5rem;
}

.f-size{
    font-size: .5rem;
}

.payment-integration .stripe-logo img{
    width: 5rem;
}

.find-out:hover{
    color: #D62E6A;
}

/* main section styling */
.main{
    padding-top: 5rem;
}

.hero h1{
    font-weight: bold;
    font-size: 30px;
}

.hero .button a{
    font-weight: bold;
    text-decoration: none;
    color: #353945;
}

.hero-img{
    padding-top: 1rem;

}
.hero-img img{
    width: 100%;
}
.hero-text{
    padding-top: 1rem;
}

.exclusive{
    background-color: #2B313D;
    padding: 1rem;
    color: #ffffff;
}
.exclusive .highlighted{
    color: #D62E6A;
}
.exclusive .collect-email .form-control{
    border-radius: 5rem;
}
.freelance-section img{
    width: 100%;
    /* height: 100%; */
}

.hero-text .fa{
    color: #D62E6A;
}

.fw-600{
    font-weight: 600;
}

.invoicing-platform{
    background-color: #2B313D;
    color: #ffffff;
}
.invoicing-platform .card{
    height: 15rem;
}
.card-d:hover{
    background-color: #f5bbcf;  
}
.invoicing-platform .card img{
    width: 10rem;
    margin: auto;
}
.invoicing-platform a{
    color: #ffffff;
    text-decoration: none;
}
.btn-skill-badge{
    height: 30px;
    border-radius: 16px;
    padding: 2px 6px 0;
    color: #2B313D;
    border: 1px solid #D62E6A;
    background: none;
    font-weight: 500;
}

.btn-skill-badgeShaded{
    height: 30px;
    border-radius: 16px;
    padding: 2px 15px 0;
    color: #ffffff;
    border: 1px solid #D62E6A;
    background: #D62E6A;
    font-weight: 500;
}

.skills-badge a{
    color: #2B313D;
    text-decoration: none;
}


.payment-integration{
    background-color: #2B313D;
    color: #ffffff;
}

.payment-integration img{
    width: 10rem;
}

.flexible-payment p{
    color: #D62E6A;
}

.pricing-section{
    background-color: #2B313D;
    color: #ffffff;
}

.pricing-section .card-header{
    border: 5px solid #ffffff;
    background-color: transparent;
    width: 15rem;
    margin: 0 auto;
    padding:1rem 1rem;
    border-radius: 20px;
}
.pricing-section .card{
    background-color: transparent;
    width: 15rem;
    border: none;
    align-items: center;
    margin: 0 auto;
}
.pricing-section .pro-card{
    background-color: #ffffff;
    color: #2B313D;
}
.pricing-section .card-header h1{
    font-size: 3rem;
}
.pricing-section .card .list-item{
    list-style: none;
    line-height: 2;
    font-weight: 500;
}
.fs-1rem{
    font-size: 1rem;
}
.border-x{
    border-left: 0.5px solid #FFFFFF;
    border-right: 0.5px solid #FFFFFF;
}
.limitted-access{
    color: rgba(206, 150, 150, 0.46);
}
.btn-buynow{
    border: 2px solid #ffffff;
    border-radius: 5rem;
    color: #ffffff;
    width: 10rem;
}
.btn-buynow:hover{
    border: 2px solid #D62E6A;
    background-color: #D62E6A;
    color: #ffffff;
    width: 10rem;
}
.btn-buynowPro{
    border: 2px solid #D62E6A;
    background-color: #D62E6A;
    border-radius: 5rem;
    color: #ffffff;
    width: 10rem;
}
.tuaneka-logo img{
    width: 7rem
}



  
.static {
    position: static;
}
  
.cover {
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}
  
.owl-carousel .owl-slide {
    position: relative;
}
  
.owl-carousel .owl-slide-animated {
    transform: translateX(20px);
    opacity: 0;
    visibility: hidden;
    transition: all 0.05s;
}
  
.owl-carousel .owl-slide-animated.is-transitioned {
    transform: none;
    opacity: 1;
    visibility: visible;
    transition: all 0.5s;
}
  
.owl-carousel .owl-slide-title.is-transitioned {
    transition-delay: 0.2s;
}
  
.owl-carousel .owl-slide-subtitle.is-transitioned {
    transition-delay: 0.35s;
}
  
.owl-carousel .owl-slide-cta.is-transitioned {
    transition-delay: 0.5s;
}
  
.owl-carousel .owl-dots,
.owl-carousel .owl-nav {
    position: absolute;
    top: 39rem;
    left: 8rem;
}

.owl-carousel .owl-dots .owl-dot,
  .owl-carousel .owl-nav [class*="owl-"]:focus {
    outline: none;
}
  
.owl-carousel .owl-dots .owl-dot span {
    background: transparent;
    border: 1px solid #D62E6A;
    transition: all 0.2s ease;
}
  
.owl-carousel .owl-dots .owl-dot:hover span,
  .owl-carousel .owl-dots .owl-dot.active span {
    background: #D62E6A;
}
  
.owl-carousel .owl-nav {
    left: 50%;
    top: 10%;
    transform: translateX(-50%);
    margin: 0;
}
  
.owl-carousel .owl-nav svg {
    opacity: 0.3;
    transition: opacity 0.3s;
}
  
.owl-carousel .owl-nav button:hover svg {
    opacity: 1;
}
  
.owl-carousel .owl-nav [class*="owl-"]:hover {
    background: transparent;
}
  
section {
    display: none;
}
.owl-carousel .owl-nav {
    top: 5%;
}
      
.owl-carousel .owl-nav svg {
    width: 24px;
    height: 24px;
}
.owl-dot{
    margin-top: 80px !important;
}

/* footer */
footer{
    background-color:#2B313D ;
    color: #ffffff;
}

footer a{
    color: #ffffff;
    text-decoration: none;
}

footer ul{
    padding-left: 0 !important;
}
footer ul li{
    list-style: none;
}

.footer-items{
    padding-top: 3rem;
}










/* Small devices (landscape phones, 576px and up) */
@media (min-width: 576px) { 
   
}

/*  Medium devices (tablets, 768px and up) */
@media (min-width: 768px) { 
    /* navbar styling */
    .has-search .form-control {
        width: 15rem;
    }  
    .hero-text{
        padding-top: 3rem;
    }
    .hero h1{
        font-size: 42px;
    }
    .owl-carousel .owl-dots,
    .owl-carousel .owl-nav {
        top: 17rem;
        left: 10rem;

    }
    .exclusive{
        border-radius: 10px 0px 0px 10px;
    }
    .freelance-section img{
        border-radius: 0px 10px 10px 0px;
    }
    .btn-skill-badge{
        padding: 2px 15px 0;

    }
    .tuaneka-logo img{
        width: 459.67px
    }

}

/*  Large devices (desktops, 992px and up) */
@media (min-width: 992px) { 
    /* navbar styling */
    .has-search .form-control {
        width: 20rem;
    }  
    .btn-tuanekaColor {
        width: 10rem;
    }
    .owl-carousel .owl-dots,
    .owl-carousel .owl-nav {
        top: 17rem;
        left: 5rem;

    }
    .exclusive{
        padding: 3rem;
    }
    .freelance-section img{
        height: 100%;
    }
    .pricing-section .card-header{
        padding:2rem 2rem; 
    }

}

/*  X-Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) { 
    /* navbar styling */
    .has-search .form-control {
        width: 25rem;
    } 
    .navbar-expand-md .navbar-nav .login {
        padding-right: 2.5rem !important;
    }
    .owl-carousel .owl-dots,
    .owl-carousel .owl-nav {
        top:22rem;
        left: 5rem;
    }
    .get-matched .owl-carousel .owl-dots,
    .owl-carousel .owl-nav {
        top:21rem;
        left: 20rem;
    }
    .hero h1 {
        font-size: 48px;
    }
    .btn-secondary{
        font-size: 1rem;
    }

    .f-size{
        font-size: 1rem;
    }

}

/* XX-Large devices (larger desktops, 1400px and up) */
@media (min-width: 1400px) { 
    .owl-carousel .owl-dots,
      .owl-carousel .owl-nav {
        left: 20rem;
      }
}

